--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,maximum-scale=1">
-	<title>Battleboat.js - A JavaScript AI that beats humans at battleship.</title>
+	<title>vs_ship</title>
 	<meta name="description" content="Battleboat.js: A JavaScript AI that beats humans at battleship.">
 	<meta name="keywords" content="Battleboat.js, battleship, AI, robot, JavaScript">
 	<meta name="google" content="notranslate">
@@ -16,23 +16,21 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png" />
 
-	<link rel="author" href="https://plus.google.com/+BillMei" />
-	<link rel="publisher" href="https://plus.google.com/+BillMei" />
 
 	<link href="css/styles.css"  rel="stylesheet" media="all"/>
 </head>
 <body>
 <div class="container">
-	<h1>Battleboat.js</h1>
-	<p class="tagline">A JavaScript AI that beats humans at battleship.</p>
+	<h1>VS_Ships</h1>
+	<p class="tagline">AI vs You</p>
 	<p>How to play</p>
 	<ol class="instructions">
-		<li id="step1">Select your ships from the left-hand side</li>
-		<li id="step2">Place your ships on your map</li>
-		<li id="step3">Click on the cells of the enemy's map<br>
+		<li id="step1">左の戦艦一覧から自分の陣地に配置してください</li>
+		<li id="step2">スタートボタンを押します</li>
+		<li id="step3">AIも自分の陣地にランダムで戦艦を配置しています<br>
 		to find and destroy all five enemy ships</li>
-		<li id="step4">The computer will fire on your ships<br>
-		immediately after you fire on its ships.</li>
+		<li id="step4">バトルが始まったらAI陣地の戦艦がありそうな場所をクリックします<br>
+		AIも反撃してきます</li>
 	</ol>
 	<div class="game-container">
 		<div id="restart-sidebar" class="hidden">
@@ -41,18 +39,18 @@
 		</div><div id="roster-sidebar">
 			<h2>Place Your Ships</h2>
 			<ul class="fleet-roster">
-				<li id="patrolboat">Patrol Boat</li>
-				<li id="submarine">Submarine</li>
-				<li id="destroyer">Destroyer</li>
-				<li id="battleship">Battleship</li>
-				<li id="carrier">Aircraft Carrier</li>
+				<li id="patrolboat"巡視船Patrol Boat</li>
+				<li id="submarine">潜水艦</li>
+				<li id="destroyer">破壊船</li>
+				<li id="battleship">戦艦</li>
+				<li id="carrier">空母</li>
 			</ul>
 			<button id="rotate-button" data-direction="0">Rotate Ship</button>
 			<button id="start-game" class="hidden">Start Game</button>
 			<button id="place-randomly" class="hidden">Place Randomly and Start</button>
 		</div><div id="stats-sidebar">
-			<h2>Stats</h2>
-			<p><strong>Games Won</strong></p>
+			<h2>統計</h2>
+			<p><strong>勝利回数</strong></p>
 			<p id="stats-wins">0 of 0</p>
 			<p><strong>Accuracy</strong></p>
 			<p id="stats-accuracy">0%</p>
@@ -67,15 +65,15 @@
 		</div>
 	</div>
 	
-	<p>Created by <a href="https://billmei.net">Bill Mei</a>.</p>
-	<p>This project is open source <a href="https://github.com/billmei/battleboat">on GitHub</a>.</p>
+	<p>Created by <a href="https://instagram.com/uhhwee_1107/">Kousey</a>.</p>
+	
 </div>
 
-<a href="https://github.com/billmei/battleboat"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MDXLY4NGC1"></script>
 <script>
-// Don't change this variable.
+
 var DEBUG_MODE = localStorage.getItem('DEBUG_MODE') === 'true';
 // To turn DEBUG_MODE on, run `setDebug(true);` in the console.
 if (!DEBUG_MODE) {
