--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	<ol class="instructions">
 		<li id="step1">左の戦艦一覧から自分の陣地に配置してください</li>
 		<li id="step2">スタートボタンを押します</li>
-		<li id="step3">AIも自分の陣地にランダムで戦艦を配置しています<br>
-		to find and destroy all five enemy ships</li>
+		<li id="step3">AIも自分の陣地にランダムで戦艦を配置しています<b
+							  </li>
 		<li id="step4">バトルが始まったらAI陣地の戦艦がありそうな場所をクリックします<br>
 		AIも反撃してきます</li>
 	</ol>
