--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div><div id="roster-sidebar">
 			<h2>Place Your Ships</h2>
 			<ul class="fleet-roster">
-				<li id="patrolboat"巡視船Patrol Boat</li>
+				<li id="patrolboat">巡視船</li>
 				<li id="submarine">潜水艦</li>
 				<li id="destroyer">破壊船</li>
 				<li id="battleship">戦艦</li>
